--- a/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <!-- Search and Profile Icons -->
-        <app-search (categoriesResults)="handleCategorySearchResults($event)"
+        <app-search (categoriesResults)="handleCategorySearchResults($event)" (exerciseResults)="handleExerciseSearchResults($event)"
             (contactUsResults)="handleContactUsSearchResults($event)" (muscleGroupResults)="handleMuscleGroupSearchResults($event)"
             (trainersResults)="handleTrainerSearchResults($event)" (usersResults)="handleUserSearchResults($event)"
             (partnersResults)="handlePartnerSearchResults($event)" (centerssResults)="handleCenterSearchResults($event)"
