--- a/src/app/admin/exercises/exercises-list/exercises-list.component.html
+++ b/src/app/admin/exercises/exercises-list/exercises-list.component.html
@@ -5,9 +5,8 @@
             <thead>
                 <tr class="cursor-pointer">
                     <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">SN</th>
-                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">IMAGE</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Demo</th>
                     <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Name</th>
-                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Body Part</th>
                     <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Status</th>
                     <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Date</th>
                     <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">ID</th>
@@ -16,54 +15,54 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let muscleGroup of muscleGroupsData; let i = index" class="bg-gray-100 hover:bg-gray-200">
+                <tr *ngFor="let exercise of exercisesData; let i = index" class="bg-gray-100 hover:bg-gray-200">
                     <td class="border-b border-gray-400 px-4 py-2">{{ i + 1 }}</td>
                     <td class="border-b border-gray-400 px-4 py-2">
-                        <img [src]="'data:image;base64,' + muscleGroup.image" class="rounded-full"
-                            onerror="this.src='../../../assets/icons/user.png';" style="width: 40px;">
-                        <label for="fileInput-{{muscleGroup.id}}" class="">
+                        <video [src]="'data:video/mp4;base64,' + exercise.demo" class="rounded-full"
+                            onerror="this.src='../../../assets/icons/user.png';" autoplay [muted]="true" loop style="width: 40px;">
+                        </video>
+                        <label for="fileInput-{{exercise.id}}" class="">
                             <i-feather name="Edit" class="font-bold text-red-600 mr-4 cursor-pointer"
                                 style="width: 10px;">
                             </i-feather>
                         </label>
-                        <input accept="image/*" type="file" id="fileInput-{{muscleGroup.id}}" style="display: none;"
-                            (change)="onImgSelected($event, muscleGroup.id)">
+                        <input accept="video/*" type="file" id="fileInput-{{exercise.id}}" style="display: none;"
+                            (change)="onVideoSelected($event, exercise.id)">
                     </td>
-                    <td class="border-b border-gray-400 px-4 py-2">{{ muscleGroup.name }}</td>
-                    <td class="border-b border-gray-400 px-4 py-2">{{ muscleGroup.bodyPart }}</td>
-                    <td class="border-b border-gray-400 px-4 py-2">{{ muscleGroup.status }}</td>
-                    <td class="border-b border-gray-400 px-4 py-2">{{ formatDate(muscleGroup.date) }}</td>
-                    <td class="border-b border-gray-400 px-4 py-2 font-bold">{{ muscleGroup.id }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ exercise.name }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ exercise.status }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ formatDate(exercise.date) }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2 font-bold">{{ exercise.id }}</td>
                     <td class="border-b border-gray-400 px-4 py-2">
                         <div class="flex items-center p-2">
                             <button
                                 class="text-sm rounded-md font-sans mx-auto ml-4
                                     transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
-                                (click)="openCategoryDetails(muscleGroup.id)">
+                                (click)="openExerciseDetails(exercise.id)">
                                 <i-feather name="eye" class="text-gray-800"></i-feather>
                             </button>
                             <button
                                 class="text-sm rounded-md font-sans mx-auto ml-4
                                         transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
-                                (click)="openUpdateCategory(muscleGroup.id)">
+                                (click)="openUpdateExercise(exercise.id)">
                                 <i-feather name="edit" class="text-red-600"></i-feather>
                             </button>
                             <button
                                 class="text-sm bg-gray-950 text-white p-1 px-2 hover:bg-gray-1000 rounded-md font-sans mx-auto ml-4
                                 transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
-                                [ngClass]="{'bg-red-600 hover:bg-red-700': muscleGroup.status == 'true'}"
-                                (click)="updateCategoryStatus(muscleGroup.id)">
-                                {{ muscleGroup.status == 'false' ? 'activate' : 'deactivate'}}
+                                [ngClass]="{'bg-red-600 hover:bg-red-700': exercise.status == 'true'}"
+                                (click)="updateExerciseStatus(exercise.id)">
+                                {{ exercise.status == 'false' ? 'activate' : 'deactivate'}}
                             </button>
                             <button
                                 class="text-sm rounded-md font-sans mx-auto ml-4
                                         transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
-                                (click)="deleteCategory(muscleGroup.id)">
+                                (click)="deleteExercise(exercise.id)">
                                 <i-feather name="trash-2" class="text-red-600"></i-feather>
                             </button>
                         </div>
                     </td>
-                    <td class="border-b border-gray-400 px-4 py-2">{{ formatDate(muscleGroup.lastUpdate) }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ formatDate(exercise.lastUpdate) }}</td>
                 </tr>
             </tbody>
         </table>
