--- a/src/app/dashboard/todo-lists/edit-todo/edit-todo.component.html
+++ b/src/app/dashboard/todo-lists/edit-todo/edit-todo.component.html
@@ -6,9 +6,7 @@
         <form [formGroup]="updateTodoForm">
             <div class="border-b-2 " [ngClass]="{'border-red-400': updateTodoForm.invalid && invalidForm }">
                 <header class="text-center m-2 font-bold font-sans">
-                    <h1 class=" text-xl">Update My Todo</h1>
-                    <p class="text-red-600 italic text-sm">Id: {{ myTodo.id }}
-                    </p>
+                    <h1 class=" text-md">Update Todo Task</h1>
                 </header>
                 <hr [ngClass]="{'border-red-500': updateTodoForm.invalid && invalidForm }">
                 <div class="invalid-form">
@@ -32,12 +30,14 @@
                             Task is required
                         </div>
                     </div>
+                    <div class="flex">
                     <div class="bg-red-600 rounded-md mx-auto m-2 flex items-center justify-center"
                         (click)="updateTodo()">
                         <button type="submit"
-                            class="font-bold font-sans py-1 px-2 text-white text-sm lg:text-md flex items-center justify-center cursor-pointer">
-                            Submit</button>
+                            class="font-bold font-sans py-1 px-2 text-white text-sm flex items-center justify-center cursor-pointer">
+                            Update</button>
                     </div>
+                </div>
                 </div>
             </div>
         </form>
