--- a/src/app/dashboard/todo-lists/todo-form/todo-form.component.html
+++ b/src/app/dashboard/todo-lists/todo-form/todo-form.component.html
@@ -29,7 +29,7 @@
             <div class="flex p-2">
             <div class="bg-red-600 rounded-md mx-auto m-2 cursor-pointer" (click)="addTodo()">
                 <button type="submit"
-                    class="py-1 px-2 font-bold font-sans text-white text-sm md:text-lg flex items-center justify-center">
+                    class="py-1 px-2 font-bold font-sans text-white text-sm md:text-md flex items-center justify-center">
                     Add
                 </button>
             </div>
