--- a/src/app/navbar/search/search.component.html
+++ b/src/app/navbar/search/search.component.html
@@ -4,19 +4,19 @@
     (results)="handleContactUsSearchResults($event)"></app-search-contact-us>
 <app-search-trainer *ngIf="searchComponent === 'trainer'"
     (results)="handleTrainerSearchResults($event)"></app-search-trainer>
-<app-search-user *ngIf="searchComponent === 'user'"
- (results)="handleUserSearchResults($event)"></app-search-user>
+<app-search-user *ngIf="searchComponent === 'user'" (results)="handleUserSearchResults($event)"></app-search-user>
 <app-search-partner *ngIf="searchComponent === 'partner'"
     (results)="handlePartnerSearchResults($event)"></app-search-partner>
 <app-search-center *ngIf="searchComponent === 'center'"
     (results)="handleCenterSearchResults($event)"></app-search-center>
 <app-search-newsletter *ngIf="searchComponent === 'newsletter'"
     (results)="handleNewsletterSearchResults($event)"></app-search-newsletter>
-<app-search-tag *ngIf="searchComponent === 'tag'" 
-(results)="handleTagSearchResults($event)"></app-search-tag>
-<app-search-my-todo *ngIf="searchComponent === 'myTodo'" 
-(results)="handleMyTodoSearchResults($event)"></app-search-my-todo>
-<app-search-todo-list *ngIf="searchComponent === 'todoList'" 
-(results)="handleTodoListSearchResults($event)"></app-search-todo-list>
-<app-search-muscle-group *ngIf="searchComponent === 'muscleGroup'" 
-(results)="handleMuscleGroupSearchResults($event)"></app-search-muscle-group>
+<app-search-tag *ngIf="searchComponent === 'tag'" (results)="handleTagSearchResults($event)"></app-search-tag>
+<app-search-my-todo *ngIf="searchComponent === 'myTodo'"
+    (results)="handleMyTodoSearchResults($event)"></app-search-my-todo>
+<app-search-todo-list *ngIf="searchComponent === 'todoList'"
+    (results)="handleTodoListSearchResults($event)"></app-search-todo-list>
+<app-search-muscle-group *ngIf="searchComponent === 'muscleGroup'"
+    (results)="handleMuscleGroupSearchResults($event)"></app-search-muscle-group>
+<app-search-exercise *ngIf="searchComponent === 'exercise'"
+    (results)="handleExerciseSearchResults($event)"></app-search-exercise>
