--- a/src/app/admin/exercises/update-exercises-modal/update-exercises-modal.component.html
+++ b/src/app/admin/exercises/update-exercises-modal/update-exercises-modal.component.html
@@ -5,7 +5,7 @@
     <section class="bg-white">
         <form [formGroup]="updateExerciseForm">
             <header class="font-bold font-sans text-center m-2 text-gray-700">
-                <h1 class="text-xl">Add Exercise</h1>
+                <h1 class="text-xl">Update Exercise</h1>
                 <p class="text-red-600 italic text-sm">Please provide details of the exercise select it's
                     muscleGroups amd categories.
                 </p>
