--- a/src/app/admin/muscle-groups/add-muscle-group-modal/add-muscle-group-modal.component.html
+++ b/src/app/admin/muscle-groups/add-muscle-group-modal/add-muscle-group-modal.component.html
@@ -6,7 +6,8 @@
         <form [formGroup]="addMuscleGroupForm">
             <header class="font-bold font-sans text-center m-2 text-gray-700">
                 <h1 class="text-xl">Add a new MuscleGroup</h1>
-                <p class="text-red-600 italic text-sm">Please provide details of the muscleGroupand select it's exercises.
+                <p class="text-red-600 italic text-sm">Please provide details of the muscleGroupand select it's
+                    exercises.
                 </p>
             </header>
             <div class="invalid-form">
@@ -26,20 +27,9 @@
                 </span>
             </div>
             <div class="grid grid-cols md:grid-cols-2 p-1 gap-2">
-                <div class="mx-auto w-full grid grid-cols-2 grid-cols-4 rounded-lg text-gray-700">
-                    <div class="rounded-lg object-cover flex col-span-4 flex">
+                <div class="mx-auto w-full grid grid-cols-2 rounded-lg text-gray-700">
+                    <div class="rounded-lg object-cover flex col-span-2 flex">
                         <img src='../../../../../assets/landing/muscle-group-1.jpg' class="rounded-lg">
-                    </div>
-                    <div *ngIf="addMuscleGroupForm.get('exerciseIds')?.invalid && invalidForm"
-                        class="text-red-500 mx-2 col-span-4">
-                        Select at least one Exercise
-                    </div>
-                    <div *ngFor="let exercise of exercises; let i = index"
-                        class="col-span-2 md:col-span-1 mx-auto w-full flex items-center">
-                        <input formArrayName="exerciseIds" (change)="onCheckboxChanged($event)"
-                            class="w-full border-b-2 rounded-lg  rounded-md m-2 text-gray-950 focus:outline-none border-gray-400 hover:border-gray-500"
-                            placeholder="tags" type="checkbox" [value]="exercise.id">
-                        {{ exercise.name }}
                     </div>
                 </div>
                 <div class="bg-gray-200 gap-5 rounded-lg p-2 ">
@@ -58,8 +48,7 @@
                                 [ngClass]="{'border-gray-950': addMuscleGroupForm.get('image')?.invalid && addMuscleGroupForm.get('image')?.dirty }"
                                 (change)="onImgSelected($event)" type="file" accept="image/*">
                         </div>
-                        <div *ngIf="addMuscleGroupForm.get('image')?.invalid && addMuscleGroupForm.get('image')?.dirty"
-                            class="text-red-500 mx-2">
+                        <div *ngIf="addMuscleGroupForm.get('image')?.invalid && invalidForm" class="text-red-500 mx-2">
                             image is required
                         </div>
                     </div>
@@ -68,8 +57,8 @@
                         <input formControlName="name"
                             class="w-full p-2 mr-2 bg-gray-100 focus:outline-none border-b-2 rounded-lg border-gray-400 hover:border-gray-500"
                             [ngClass]="{'border-red-400': addMuscleGroupForm.get('name')?.invalid && addMuscleGroupForm.get('name')?.touched 
-                            || (addMuscleGroupForm.get('name')?.invalid && invalidForm)}" placeholder="MuscleGroup Name"
-                            type="text">
+                            || (addMuscleGroupForm.get('name')?.invalid && invalidForm)}"
+                            placeholder="MuscleGroup Name" type="text">
                         <div *ngIf="addMuscleGroupForm.get('name')?.invalid && addMuscleGroupForm.get('name')?.dirty 
                         || (addMuscleGroupForm.get('name')?.invalid && invalidForm)" class="text-red-500 mx-2">
                             MuscleGroup Name is required
@@ -83,7 +72,8 @@
                             || (addMuscleGroupForm.get('bodyPart')?.invalid && invalidForm)}" placeholder="bodyPart"
                             type="text">
                             <option selected hidden class="w-auto font-sans">Select bodyPart name</option>
-                            <option *ngFor="let bodyPart of bodyParts" class="w-auto p-8 text-sm m-8">{{ bodyPart.name }}</option>
+                            <option *ngFor="let bodyPart of bodyParts" class="w-auto p-8 text-sm m-8">{{ bodyPart.name
+                                }}</option>
                         </select>
                         <div *ngIf="addMuscleGroupForm.get('bodyPart')?.invalid && addMuscleGroupForm.get('bodyPart')?.dirty|| 
                         (addMuscleGroupForm.get('bodyPart')?.invalid && invalidForm)" class="text-red-500 mx-2">
@@ -113,9 +103,8 @@
                         <div class="bg-red-600 rounded-md mx-auto m-2">
                             <button type="submit"
                                 class="p-2 font-bold font-sans py-1 px-2 text-white text-sm lg:text-md flex items-center justify-center"
-                                (click)="addCategory()">
+                                (click)="addMuscleGroup()">
                                 Add
-
                             </button>
                         </div>
                     </div>
